# omostation-l4-kernel

./: .gitignore  ACKNOWLEDGMENTS.md  AGENTS.md  ARCHITECTURE.md  BOUNDARY.md  CALLCHAIN.md  CAPABILITY-MAP.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  INTERFACE.yaml  Makefile  README.md  README.zh.md  RELEASE.md  SECURITY.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  health-check.yml
.omc/state/: last-tool-error.json
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  EXAMPLES.md  FAQ.md  MIGRATION.md  README.md  TROUBLESHOOTING.md
scripts/: health_alert.py  health_cron.sh  health_dashboard.py  health_monitor.py  health_trend.py  signal_aggregate.py  signal_analysis.py  signal_cleanup.py
src/l4_kernel/: __init__.py  claude_injector.py  cli.py  concurrency.py  config_loader.py  consistency.py  distributed.py  domain_plugins.py  domain_relations.py  domain_types.py  federation.py  health.py  kems.py  lifecycle.py  mcp_server.py  plugins.py  registry.py  signals.py  skill_loader.py  templates.py  testing.py  workflows.py
src/l4_kernel/monitor/: __init__.py  contract_monitor.py
tests/: conftest.py  test_claude_injector.py  test_config_loader.py  test_consistency.py  test_distributed.py  test_distributed_scenarios.py  test_domain_plugins.py  test_domain_types.py  test_health.py  test_kems.py  test_lifecycle.py  test_mcp_server.py  test_plugins.py  test_registry.py  test_signals.py  test_templates.py  test_workflows.py
