[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "l4-kernel"
version = "0.1.0"
description = "L4 Domain Kernel — 自我层管理面：19域统一注册 + KEMS六面操作 + 健康聚合"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "ruff>=0.8",
]

[project.scripts]
l4-kernel = "l4_kernel.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/l4_kernel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-q", "--tb=short"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "PLE", "RUF100"]
ignore = ["S101", "S603", "S607", "S108", "S110", "S314", "S608", "E402", "E501"]

[tool.ruff.format]
quote-style = "double"
